# PuntyAI

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  README.md  TODO_SECURITY.md  fly.toml  package-lock.json  package.json  pyproject.toml  pytest.ini  tailwind.config.js
.githooks/: pre-commit
docs/: CODE_REVIEW_REPORT_2026-02-04.md  SYSTEM_AUDIT_2026-02-15.md  TECHNICAL_SPECIFICATION.md  probability_engine_manual.md
prompts/: early_mail.md  initialise.md  personality.md  race_preview.md  results.md  speed_map_update.md  weekly_blog.md  widen_selections.md  wrap_up.md
punty/: __init__.py  auth.py  bet_type_tuning.py  calibration_engine.py  config.py  data_validation.py  issues.py  main.py  market_layer.py  odds.py  probability.py  probability_tuning.py  rate_limit.py  sense_check.py  tissue.py  venues.py  venues_validator.py
scripts/: _e2e_dryrun.py  _import_report.py  _ra_debug.html  _server_check.py  _today_full.csv  analyze_historical_payouts.py  audit_lgbm_weekend.py  audit_sequences.py  audit_today.py  backfill_probabilities.py  backfill_puntys_pick.py  backtest_2025_formulas.py  backtest_probability.py  backup_db.sh  build_analytics.py  build_barrier_calibration.py  build_calibration.py  build_context_profiles.py  build_tissue_tables.py  build_training_db.py  calibrate_output.py  check_all_settled.py  check_all_settlements.py  check_big3.py  check_columns.py  check_content.py  check_dupes.py  check_exotic_keys.py  check_exotic_vs_selections.py  check_form.py  check_form10.py  check_form11.py  check_form12.py  check_form13.py  (+85 more)
(+359 files in other folders)
