[project]
name = "puntyai"
version = "0.1.0"
description = "AI-powered horse racing content generator - Punty the cheeky Aussie tipster"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "jinja2>=3.1.3",
    "python-multipart>=0.0.6",

    # Database
    "sqlalchemy>=2.0.25",
    "aiosqlite>=0.19.0",

    # HTTP & Scraping
    "httpx>=0.26.0",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.1.0",
    "playwright>=1.40.0",

    # Scheduler
    "apscheduler>=3.10.4",

    # AI
    "openai>=1.10.0",
    "anthropic>=0.39.0",

    # Telegram
    "python-telegram-bot>=22.0",

    # Config & Utils
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",

    # SSE for real-time updates
    "sse-starlette>=2.0.0",

    # Twitter/X API
    "tweepy>=4.14.0",

    # Auth
    "authlib>=1.3.0",
    "itsdangerous>=2.1.0",
    "bcrypt>=4.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-playwright>=0.5.0",
    "ruff>=0.1.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["punty"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
